--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-contourpy                 1.3.1
-matplotlib                3.10.1
-matplotlib-inline         0.1.7
-numpy                     2.2.4
-packaging                 24.2
-pandas                    2.2.3
-pillow                    11.1.0
-pip                       24.0
-pyparsing                 3.2.2
-scikit-learn              1.6.1
-scipy                     1.15.2
-streamlit                 1.43.2
+streamlit
+pandas
+matplotlib
+scikit-learn
+numpy
+pickle5
