--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-matplotlib
-scikit-learn
-numpy
-pickle5
+streamlit==1.30.0
+pandas==2.2.0
+matplotlib==3.8.2
+scikit-learn==1.3.2
+numpy==1.26.3
+pickle5==0.0.12
